implemented high score and game over

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </div>
             <div class="score-box">
                 <div class="score-title">Best</div>
-                <div class="score-value">0</div>
+                <div class="score-value best">0</div>
             </div>
         </div>
     </div>
