--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
         <div class="game-over">
             <div class="game-over-text">Game Over!</div>
         </div>
+        <div class="you-won">
+            <div class="game-over-text">You-won!</div>
+        </div>
     </div>
 
     <button class="new-game-btn">New Game</button>
